Added Screenshot script

--- a/ebayApp/test-output/index.html
+++ b/ebayApp/test-output/index.html
@@ -240,20 +240,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyCategories')
 data.setCell(0, 2, 'com.ebay.Testcases.Categories')
-data.setCell(0, 3, 59570);
+data.setCell(0, 3, 66201);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'SignInVerification')
 data.setCell(1, 2, 'com.ebay.Testcases.Login')
-data.setCell(1, 3, 38705);
+data.setCell(1, 3, 38725);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'search')
 data.setCell(2, 2, 'com.ebay.Testcases.Search')
-data.setCell(2, 3, 1437);
+data.setCell(2, 3, 36077);
 window.suiteTableData['ebay_App_Suite']= { tableData: data, tableDiv: 'times-div-ebay_App_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 2 minutes</span>
               <div id="times-div-ebay_App_Suite">
               </div> <!-- times-div-ebay_App_Suite -->
             </div> <!-- times-div -->
@@ -280,12 +280,21 @@ return data;
                 <span class="reporter-method-output">Button MAYBE LATER was clicked</span>
                 <span class="reporter-method-output"> object is displayed</span>
                 <span class="reporter-method-output">Signned In successfully</span>
+                <span class="reporter-method-output"><br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp\ScreenShots7ea3e849-c150-40c3-9713-be9f34de0d29.png'height=500' width='500'/><br></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
             <div class="reporter-method-div">
               <span class="reporter-method-name">search({TestCase=Test case to verify Search, InputValue=Phone, execute=Y, VerificationKey=Search})</span>
               <div class="reporter-method-output-div">
                 <span class="reporter-method-output"> object is displayed</span>
+                <span class="reporter-method-output">Clicked on searchBok</span>
+                <span class="reporter-method-output">Cleared searchBok</span>
+                <span class="reporter-method-output">Phone was input into UI</span>
+                <span class="reporter-method-output">Clicked on Mobile Phones</span>
+                <span class="reporter-method-output"><br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp\ScreenShots74a64d82-2bbd-43a6-8f12-53eb5bae674c.png'height=500' width='500'/><br></span>
+                <span class="reporter-method-output">No results found for “phone” object is displayed</span>
+                <span class="reporter-method-output">Test case to verify SearchPassed</span>
+                <span class="reporter-method-output"><br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp\ScreenShots137c6bda-8045-4794-8e0e-628f46bdc664.png'height=500' width='500'/><br></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
             <div class="reporter-method-div">
@@ -295,6 +304,7 @@ return data;
                 <span class="reporter-method-output">Button CATEGORIES was clicked</span>
                 <span class="reporter-method-output">Everything Else object is displayed</span>
                 <span class="reporter-method-output">Test case to verify CategoriesPassed</span>
+                <span class="reporter-method-output"><br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp\ScreenShots3254b654-8a6a-43c9-9cad-9d047629a7ed.png'height=500' width='500'/><br></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -319,41 +329,41 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">SignInVerification({TestCase=Test case to verify Sign In, Password=Test%123, execute=Y, UserName=bhargavi.ravi0509@gmai...)</span>
-                <span class="method-start">39815 ms</span>
+                <span class="method-start">42880 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">TearDown</span>
-                <span class="method-start">78525 ms</span>
+                <span class="method-start">81607 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.ebay.Testcases.Categories</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">Setup(Android, 7.0, ZY3222CHPK, portrait, Appium, 1000, true, true)</span>
-                <span class="method-start">85503 ms</span>
+                <span class="method-start">88749 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyCategories({TestCase=Test case to verify Categories, execute=Y, VerificationKey=Categories})</span>
-                <span class="method-start">120819 ms</span>
+                <span class="method-start">120841 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">TearDown</span>
-                <span class="method-start">180391 ms</span>
+                <span class="method-start">187043 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.ebay.Testcases.Search</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">Setup(Android, 7.0, ZY3222CHPK, portrait, Appium, 1000, true, true)</span>
-                <span class="method-start">187531 ms</span>
+                <span class="method-start">194823 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">search({TestCase=Test case to verify Search, InputValue=Phone, execute=Y, VerificationKey=Search})</span>
-                <span class="method-start">222746 ms</span>
+                <span class="method-start">246899 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">TearDown</span>
-                <span class="method-start">224184 ms</span>
+                <span class="method-start">282981 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
