--- a/ebayApp/test-output/emailable-report.html
+++ b/ebayApp/test-output/emailable-report.html
@@ -31,14 +31,14 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">ebay App Validation on Android Emulator 7.0</td><td class="numi">3</td><td class="numi">3</td><td class="numi">0</td><td class="numi">0</td><td class="numi">231.7 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">ebay App Validation on Android Emulator 7.0</td><td class="numi">3</td><td class="numi">3</td><td class="numi">0</td><td class="numi">0</td><td class="numi">292.3 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr><th colspan="4">ebay App Validation on Android Emulator 7.0 &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="1">com.ebay.Testcases.Login</td><td><a href="#m1"><b>SignInVerification</b>  </a></td><td class="numi">1</td><td>1536134684522</td><td class="numi">38705</td></tr>
-<tr class="passedeven"><td rowspan="1">com.ebay.Testcases.Search</td><td><a href="#m2"><b>search</b>  </a></td><td class="numi">1</td><td>1536134867453</td><td class="numi">1437</td></tr>
-<tr class="passedodd"><td rowspan="1">com.ebay.Testcases.Categories</td><td><a href="#m3"><b>verifyCategories</b>  </a></td><td class="numi">1</td><td>1536134765526</td><td class="numi">59570</td></tr>
+<tr class="passedodd"><td rowspan="1">com.ebay.Testcases.Login</td><td><a href="#m1"><b>SignInVerification</b>  </a></td><td class="numi">1</td><td>1536320279820</td><td class="numi">38725</td></tr>
+<tr class="passedeven"><td rowspan="1">com.ebay.Testcases.Search</td><td><a href="#m2"><b>search</b>  </a></td><td class="numi">1</td><td>1536320483839</td><td class="numi">36077</td></tr>
+<tr class="passedodd"><td rowspan="1">com.ebay.Testcases.Categories</td><td><a href="#m3"><b>verifyCategories</b>  </a></td><td class="numi">1</td><td>1536320357781</td><td class="numi">66201</td></tr>
 </table>
 <h1>ebay App Validation on Android Emulator 7.0</h1>
 <h2 id="m1">com.ebay.Testcases.Login:SignInVerification</h2>
@@ -60,6 +60,7 @@ Button SIGN IN was clicked<br/>
 Button MAYBE LATER was clicked<br/>
  object is displayed<br/>
 Signned In successfully<br/>
+<br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp\ScreenShots7ea3e849-c150-40c3-9713-be9f34de0d29.png'height=500' width='500'/><br><br/>
 </td></tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
@@ -70,6 +71,14 @@ Signned In successfully<br/>
 </tr>
 <tr><td style="padding-left:3em" colspan="1">
  object is displayed<br/>
+Clicked on searchBok<br/>
+Cleared searchBok<br/>
+Phone was input into UI<br/>
+Clicked on Mobile Phones<br/>
+<br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp\ScreenShots74a64d82-2bbd-43a6-8f12-53eb5bae674c.png'height=500' width='500'/><br><br/>
+No results found for “phone” object is displayed<br/>
+Test case to verify SearchPassed<br/>
+<br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp\ScreenShots137c6bda-8045-4794-8e0e-628f46bdc664.png'height=500' width='500'/><br><br/>
 </td></tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
@@ -83,6 +92,7 @@ Signned In successfully<br/>
 Button CATEGORIES was clicked<br/>
 Everything Else object is displayed<br/>
 Test case to verify CategoriesPassed<br/>
+<br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp\ScreenShots3254b654-8a6a-43c9-9cad-9d047629a7ed.png'height=500' width='500'/><br><br/>
 </td></tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
