updated ss method

--- a/ebayApp/test-output/old/ebay App Suite/reporter-output.html
+++ b/ebayApp/test-output/old/ebay App Suite/reporter-output.html
@@ -1,29 +1,10 @@
 <h2>Reporter output</h2><table><tr><td> object is displayed</td></tr>
-<tr><td> object is displayed</td></tr>
-<tr><td>Button  was clicked</td></tr>
-<tr><td>SIGN IN object is displayed</td></tr>
-<tr><td>Button SIGN IN was clicked</td></tr>
-<tr><td>bhargavi.ravi0509@gmail.com was input into UI</td></tr>
-<tr><td>Entered UN</td></tr>
-<tr><td>Test%123 was input into UI</td></tr>
-<tr><td>Entered Pwd</td></tr>
-<tr><td>Button SIGN IN was clicked</td></tr>
-<tr><td>Button MAYBE LATER was clicked</td></tr>
-<tr><td> object is displayed</td></tr>
-<tr><td>Signned In successfully</td></tr>
-<tr><td><br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp\ScreenShots7ea3e849-c150-40c3-9713-be9f34de0d29.png'height=500' width='500'/><br></td></tr>
-<tr><td> object is displayed</td></tr>
-<tr><td>Button CATEGORIES was clicked</td></tr>
-<tr><td>Everything Else object is displayed</td></tr>
-<tr><td>Test case to verify CategoriesPassed</td></tr>
-<tr><td><br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp\ScreenShots3254b654-8a6a-43c9-9cad-9d047629a7ed.png'height=500' width='500'/><br></td></tr>
-<tr><td> object is displayed</td></tr>
 <tr><td>Clicked on searchBok</td></tr>
 <tr><td>Cleared searchBok</td></tr>
 <tr><td>Phone was input into UI</td></tr>
 <tr><td>Clicked on Mobile Phones</td></tr>
-<tr><td><br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp\ScreenShots74a64d82-2bbd-43a6-8f12-53eb5bae674c.png'height=500' width='500'/><br></td></tr>
+<tr><td><br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp/TestsScreenshots/SS20180913125258.png'height=500' width='500'/><br></td></tr>
 <tr><td>No results found for “phone” object is displayed</td></tr>
 <tr><td>Test case to verify SearchPassed</td></tr>
-<tr><td><br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp\ScreenShots137c6bda-8045-4794-8e0e-628f46bdc664.png'height=500' width='500'/><br></td></tr>
+<tr><td><br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp/TestsScreenshots/SS20180913125307.png'height=500' width='500'/><br></td></tr>
 </table>
