--- a/ebayApp/test-output/index.html
+++ b/ebayApp/test-output/index.html
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,17 +101,7 @@
                     <div class="method-list-content passed suite-ebay_App_Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-ebay_App_Suite" title="com.ebay.Testcases.Login" hash-for-method="SignInVerification({TestCase=Test case to verify Sign In, Password=Test%123, execute=Y, UserName=bhargavi.ravi0509@gmai...)">SignInVerification({TestCase=Test case to verify Sign In, Password=Test%123, execute=Y, UserName=bhargavi.ravi0509@gmai...)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-ebay_App_Suite" title="com.ebay.Testcases.Search" hash-for-method="search({TestCase=Test case to verify Search, InputValue=Phone, execute=Y, VerificationKey=Search})">search({TestCase=Test case to verify Search, InputValue=Phone, execute=Y, VerificationKey=Search})</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-ebay_App_Suite" title="com.ebay.Testcases.Categories" hash-for-method="verifyCategories({TestCase=Test case to verify Categories, execute=Y, VerificationKey=Categories})">verifyCategories({TestCase=Test case to verify Categories, execute=Y, VerificationKey=Categories})</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-ebay_App_Suite -->
@@ -142,38 +132,6 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-ebay_App_Suite-class-passed -->
-          <div class="suite-ebay_App_Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.ebay.Testcases.Categories</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyCategories({TestCase=Test case to verify Categories, execute=Y, VerificationKey=Categories})">
-                  </a> <!-- verifyCategories({TestCase=Test case to verify Categories, execute=Y, VerificationKey=Categories}) -->
-                  <span class="method-name">verifyCategories</span>
-                  <span class="parameters">({TestCase=Test case to verify Categories, execute=Y, VerificationKey=Categories})</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-ebay_App_Suite-class-passed -->
-          <div class="suite-ebay_App_Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.ebay.Testcases.Login</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="SignInVerification({TestCase=Test case to verify Sign In, Password=Test%123, execute=Y, UserName=bhargavi.ravi0509@gmai...)">
-                  </a> <!-- SignInVerification({TestCase=Test case to verify Sign In, Password=Test%123, execute=Y, UserName=bhargavi.ravi0509@gmai...) -->
-                  <span class="method-name">SignInVerification</span>
-                  <span class="parameters">({TestCase=Test case to verify Sign In, Password=Test%123, execute=Y, UserName=bhargavi.ravi0509@gmail.com, VerificationKey=SignIn})</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-ebay_App_Suite-class-passed -->
         </div> <!-- panel ebay_App_Suite -->
         <div panel-name="test-xml-ebay_App_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -194,8 +152,6 @@
     &lt;parameter name=&quot;deviceName&quot; value=&quot;ZY3222CHPK&quot;/&gt;
     &lt;parameter name=&quot;resetKeyboard&quot; value=&quot;true&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.ebay.Testcases.Login&quot;/&gt;
-      &lt;class name=&quot;com.ebay.Testcases.Categories&quot;/&gt;
       &lt;class name=&quot;com.ebay.Testcases.Search&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- ebay App Validation on Android Emulator 7.0 --&gt;
@@ -210,7 +166,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">ebay App Validation on Android Emulator 7.0 (3 classes)</span>
+                <span class="test-name">ebay App Validation on Android Emulator 7.0 (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -236,24 +192,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyCategories')
-data.setCell(0, 2, 'com.ebay.Testcases.Categories')
-data.setCell(0, 3, 66201);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'SignInVerification')
-data.setCell(1, 2, 'com.ebay.Testcases.Login')
-data.setCell(1, 3, 38725);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'search')
-data.setCell(2, 2, 'com.ebay.Testcases.Search')
-data.setCell(2, 3, 36077);
+data.setCell(0, 1, 'search')
+data.setCell(0, 2, 'com.ebay.Testcases.Search')
+data.setCell(0, 3, 24158);
 window.suiteTableData['ebay_App_Suite']= { tableData: data, tableDiv: 'times-div-ebay_App_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 minutes</span>
+              <span class="suite-total-time">Total running time: 24 seconds</span>
               <div id="times-div-ebay_App_Suite">
               </div> <!-- times-div-ebay_App_Suite -->
             </div> <!-- times-div -->
@@ -265,25 +213,6 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">SignInVerification({TestCase=Test case to verify Sign In, Password=Test%123, execute=Y, UserName=bhargavi.ravi0509@gmai...)</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output"> object is displayed</span>
-                <span class="reporter-method-output"> object is displayed</span>
-                <span class="reporter-method-output">Button  was clicked</span>
-                <span class="reporter-method-output">SIGN IN object is displayed</span>
-                <span class="reporter-method-output">Button SIGN IN was clicked</span>
-                <span class="reporter-method-output">bhargavi.ravi0509@gmail.com was input into UI</span>
-                <span class="reporter-method-output">Entered UN</span>
-                <span class="reporter-method-output">Test%123 was input into UI</span>
-                <span class="reporter-method-output">Entered Pwd</span>
-                <span class="reporter-method-output">Button SIGN IN was clicked</span>
-                <span class="reporter-method-output">Button MAYBE LATER was clicked</span>
-                <span class="reporter-method-output"> object is displayed</span>
-                <span class="reporter-method-output">Signned In successfully</span>
-                <span class="reporter-method-output"><br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp\ScreenShots7ea3e849-c150-40c3-9713-be9f34de0d29.png'height=500' width='500'/><br></span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
-            <div class="reporter-method-div">
               <span class="reporter-method-name">search({TestCase=Test case to verify Search, InputValue=Phone, execute=Y, VerificationKey=Search})</span>
               <div class="reporter-method-output-div">
                 <span class="reporter-method-output"> object is displayed</span>
@@ -291,20 +220,10 @@ return data;
                 <span class="reporter-method-output">Cleared searchBok</span>
                 <span class="reporter-method-output">Phone was input into UI</span>
                 <span class="reporter-method-output">Clicked on Mobile Phones</span>
-                <span class="reporter-method-output"><br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp\ScreenShots74a64d82-2bbd-43a6-8f12-53eb5bae674c.png'height=500' width='500'/><br></span>
+                <span class="reporter-method-output"><br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp/TestsScreenshots/SS20180913125258.png'height=500' width='500'/><br></span>
                 <span class="reporter-method-output">No results found for “phone” object is displayed</span>
                 <span class="reporter-method-output">Test case to verify SearchPassed</span>
-                <span class="reporter-method-output"><br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp\ScreenShots137c6bda-8045-4794-8e0e-628f46bdc664.png'height=500' width='500'/><br></span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">verifyCategories({TestCase=Test case to verify Categories, execute=Y, VerificationKey=Categories})</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output"> object is displayed</span>
-                <span class="reporter-method-output">Button CATEGORIES was clicked</span>
-                <span class="reporter-method-output">Everything Else object is displayed</span>
-                <span class="reporter-method-output">Test case to verify CategoriesPassed</span>
-                <span class="reporter-method-output"><br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp\ScreenShots3254b654-8a6a-43c9-9cad-9d047629a7ed.png'height=500' width='500'/><br></span>
+                <span class="reporter-method-output"><br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp/TestsScreenshots/SS20180913125307.png'height=500' width='500'/><br></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -322,48 +241,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.ebay.Testcases.Login</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.ebay.Testcases.Search</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">Setup(Android, 7.0, ZY3222CHPK, portrait, Appium, 1000, true, true)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">SignInVerification({TestCase=Test case to verify Sign In, Password=Test%123, execute=Y, UserName=bhargavi.ravi0509@gmai...)</span>
-                <span class="method-start">42880 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">TearDown</span>
-                <span class="method-start">81607 ms</span>
-              </div> <!-- configuration-class after -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.ebay.Testcases.Categories</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
-                <span class="method-name">Setup(Android, 7.0, ZY3222CHPK, portrait, Appium, 1000, true, true)</span>
-                <span class="method-start">88749 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">verifyCategories({TestCase=Test case to verify Categories, execute=Y, VerificationKey=Categories})</span>
-                <span class="method-start">120841 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">TearDown</span>
-                <span class="method-start">187043 ms</span>
-              </div> <!-- configuration-class after -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.ebay.Testcases.Search</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
-                <span class="method-name">Setup(Android, 7.0, ZY3222CHPK, portrait, Appium, 1000, true, true)</span>
-                <span class="method-start">194823 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
                 <span class="method-name">search({TestCase=Test case to verify Search, InputValue=Phone, execute=Y, VerificationKey=Search})</span>
-                <span class="method-start">246899 ms</span>
+                <span class="method-start">59731 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">TearDown</span>
-                <span class="method-start">282981 ms</span>
+                <span class="method-start">83897 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
