Updated screenshot methods

--- a/ebayApp/test-output/index.html
+++ b/ebayApp/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-ebay_App_Suite">
-                    <span>C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp\testng_Android.xml</span>
+                    <span>C:\Users\bhargavi\git\TaskRepositiry2\ebayApp\testng_Android.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -177,7 +177,7 @@
         </div> <!-- panel ebay_App_Suite -->
         <div panel-name="test-xml-ebay_App_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp\testng_Android.xml</span>
+            <span class="header-content">C:\Users\bhargavi\git\TaskRepositiry2\ebayApp\testng_Android.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -240,15 +240,15 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyCategories')
 data.setCell(0, 2, 'com.ebay.Testcases.Categories')
-data.setCell(0, 3, 57267);
+data.setCell(0, 3, 56661);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'SignInVerification')
 data.setCell(1, 2, 'com.ebay.Testcases.Login')
-data.setCell(1, 3, 39523);
+data.setCell(1, 3, 40225);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'search')
 data.setCell(2, 2, 'com.ebay.Testcases.Search')
-data.setCell(2, 3, 21978);
+data.setCell(2, 3, 21412);
 window.suiteTableData['ebay_App_Suite']= { tableData: data, tableDiv: 'times-div-ebay_App_Suite'}
 return data;
 }
@@ -272,10 +272,10 @@ return data;
                 <span class="reporter-method-output">Cleared searchBok</span>
                 <span class="reporter-method-output">Phone was input into UI</span>
                 <span class="reporter-method-output">Clicked on Mobile Phones</span>
-                <span class="reporter-method-output"><br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp/TestsScreenshots/SS20180913022335.png'height=500' width='500'/><br></span>
+                <span class="reporter-method-output">Capcher screenshot path is <img src="file://C:\Users\bhargavi\git\TaskRepositiry2\ebayApp\test-output\screenshot\SS20180913071029.png" alt=""/></span>
                 <span class="reporter-method-output">No results found for “phone” object is displayed</span>
                 <span class="reporter-method-output">Test case to verify SearchPassed</span>
-                <span class="reporter-method-output"><br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp/TestsScreenshots/SS20180913022342.png'height=500' width='500'/><br></span>
+                <span class="reporter-method-output">Capcher screenshot path is <img src="file://C:\Users\bhargavi\git\TaskRepositiry2\ebayApp\test-output\screenshot\SS20180913071037.png" alt=""/></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
             <div class="reporter-method-div">
@@ -294,7 +294,7 @@ return data;
                 <span class="reporter-method-output">Button MAYBE LATER was clicked</span>
                 <span class="reporter-method-output"> object is displayed</span>
                 <span class="reporter-method-output">Signned In successfully</span>
-                <span class="reporter-method-output"><br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp/TestsScreenshots/SS20180913022028.png'height=500' width='500'/><br></span>
+                <span class="reporter-method-output">Capcher screenshot path is <img src="file://C:\Users\bhargavi\git\TaskRepositiry2\ebayApp\test-output\screenshot\SS20180913070401.png" alt=""/></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
             <div class="reporter-method-div">
@@ -304,7 +304,7 @@ return data;
                 <span class="reporter-method-output">Button CATEGORIES was clicked</span>
                 <span class="reporter-method-output">Everything Else object is displayed</span>
                 <span class="reporter-method-output">Test case to verify CategoriesPassed</span>
-                <span class="reporter-method-output"><br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp/TestsScreenshots/SS20180913022221.png'height=500' width='500'/><br></span>
+                <span class="reporter-method-output">Capcher screenshot path is <img src="file://C:\Users\bhargavi\git\TaskRepositiry2\ebayApp\test-output\screenshot\SS20180913070553.png" alt=""/></span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -329,41 +329,41 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">SignInVerification({TestCase=Test case to verify Sign In, Password=Test%123, execute=Y, UserName=bhargavi.ravi0509@gmai...)</span>
-                <span class="method-start">59023 ms</span>
+                <span class="method-start">58495 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">TearDown</span>
-                <span class="method-start">98548 ms</span>
+                <span class="method-start">98722 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.ebay.Testcases.Categories</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">Setup(Android, 7.0, ZY3222CHPK, portrait, Appium, 1000, true, true)</span>
-                <span class="method-start">105843 ms</span>
+                <span class="method-start">106312 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyCategories({TestCase=Test case to verify Categories, execute=Y, VerificationKey=Categories})</span>
-                <span class="method-start">155909 ms</span>
+                <span class="method-start">155782 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">TearDown</span>
-                <span class="method-start">213179 ms</span>
+                <span class="method-start">212444 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.ebay.Testcases.Search</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">Setup(Android, 7.0, ZY3222CHPK, portrait, Appium, 1000, true, true)</span>
-                <span class="method-start">220720 ms</span>
+                <span class="method-start">221095 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">search({TestCase=Test case to verify Search, InputValue=Phone, execute=Y, VerificationKey=Search})</span>
-                <span class="method-start">271691 ms</span>
+                <span class="method-start">473370 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">TearDown</span>
-                <span class="method-start">293673 ms</span>
+                <span class="method-start">494786 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
