--- a/ebayApp/test-output/emailable-report.html
+++ b/ebayApp/test-output/emailable-report.html
@@ -31,14 +31,14 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">ebay App Validation on Android Emulator 7.0</td><td class="numi">3</td><td class="numi">3</td><td class="numi">0</td><td class="numi">0</td><td class="numi">301.8 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">ebay App Validation on Android Emulator 7.0</td><td class="numi">3</td><td class="numi">3</td><td class="numi">0</td><td class="numi">0</td><td class="numi">503.2 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr><th colspan="4">ebay App Validation on Android Emulator 7.0 &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="1">com.ebay.Testcases.Login</td><td><a href="#m1"><b>SignInVerification</b>  </a></td><td class="numi">1</td><td>1536785391098</td><td class="numi">39523</td></tr>
-<tr class="passedeven"><td rowspan="1">com.ebay.Testcases.Search</td><td><a href="#m2"><b>search</b>  </a></td><td class="numi">1</td><td>1536785603766</td><td class="numi">21978</td></tr>
-<tr class="passedodd"><td rowspan="1">com.ebay.Testcases.Categories</td><td><a href="#m3"><b>verifyCategories</b>  </a></td><td class="numi">1</td><td>1536785487984</td><td class="numi">57267</td></tr>
+<tr class="passedodd"><td rowspan="1">com.ebay.Testcases.Login</td><td><a href="#m1"><b>SignInVerification</b>  </a></td><td class="numi">1</td><td>1536802403454</td><td class="numi">40225</td></tr>
+<tr class="passedeven"><td rowspan="1">com.ebay.Testcases.Search</td><td><a href="#m2"><b>search</b>  </a></td><td class="numi">1</td><td>1536802818329</td><td class="numi">21412</td></tr>
+<tr class="passedodd"><td rowspan="1">com.ebay.Testcases.Categories</td><td><a href="#m3"><b>verifyCategories</b>  </a></td><td class="numi">1</td><td>1536802500741</td><td class="numi">56661</td></tr>
 </table>
 <h1>ebay App Validation on Android Emulator 7.0</h1>
 <h2 id="m1">com.ebay.Testcases.Search:search</h2>
@@ -52,10 +52,10 @@ Clicked on searchBok<br/>
 Cleared searchBok<br/>
 Phone was input into UI<br/>
 Clicked on Mobile Phones<br/>
-<br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp/TestsScreenshots/SS20180913022335.png'height=500' width='500'/><br><br/>
+Capcher screenshot path is <img src="file://C:\Users\bhargavi\git\TaskRepositiry2\ebayApp\test-output\screenshot\SS20180913071029.png" alt=""/><br/>
 No results found for “phone” object is displayed<br/>
 Test case to verify SearchPassed<br/>
-<br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp/TestsScreenshots/SS20180913022342.png'height=500' width='500'/><br><br/>
+Capcher screenshot path is <img src="file://C:\Users\bhargavi\git\TaskRepositiry2\ebayApp\test-output\screenshot\SS20180913071037.png" alt=""/><br/>
 </td></tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
@@ -78,7 +78,7 @@ Button SIGN IN was clicked<br/>
 Button MAYBE LATER was clicked<br/>
  object is displayed<br/>
 Signned In successfully<br/>
-<br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp/TestsScreenshots/SS20180913022028.png'height=500' width='500'/><br><br/>
+Capcher screenshot path is <img src="file://C:\Users\bhargavi\git\TaskRepositiry2\ebayApp\test-output\screenshot\SS20180913070401.png" alt=""/><br/>
 </td></tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
@@ -92,7 +92,7 @@ Signned In successfully<br/>
 Button CATEGORIES was clicked<br/>
 Everything Else object is displayed<br/>
 Test case to verify CategoriesPassed<br/>
-<br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp/TestsScreenshots/SS20180913022221.png'height=500' width='500'/><br><br/>
+Capcher screenshot path is <img src="file://C:\Users\bhargavi\git\TaskRepositiry2\ebayApp\test-output\screenshot\SS20180913070553.png" alt=""/><br/>
 </td></tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
