--- a/ebayApp/test-output/old/ebay App Suite/reporter-output.html
+++ b/ebayApp/test-output/old/ebay App Suite/reporter-output.html
@@ -11,19 +11,19 @@
 <tr><td>Button MAYBE LATER was clicked</td></tr>
 <tr><td> object is displayed</td></tr>
 <tr><td>Signned In successfully</td></tr>
-<tr><td><br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp/TestsScreenshots/SS20180913022028.png'height=500' width='500'/><br></td></tr>
+<tr><td>Capcher screenshot path is <img src="file://C:\Users\bhargavi\git\TaskRepositiry2\ebayApp\test-output\screenshot\SS20180913070401.png" alt=""/></td></tr>
 <tr><td> object is displayed</td></tr>
 <tr><td>Button CATEGORIES was clicked</td></tr>
 <tr><td>Everything Else object is displayed</td></tr>
 <tr><td>Test case to verify CategoriesPassed</td></tr>
-<tr><td><br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp/TestsScreenshots/SS20180913022221.png'height=500' width='500'/><br></td></tr>
+<tr><td>Capcher screenshot path is <img src="file://C:\Users\bhargavi\git\TaskRepositiry2\ebayApp\test-output\screenshot\SS20180913070553.png" alt=""/></td></tr>
 <tr><td> object is displayed</td></tr>
 <tr><td>Clicked on searchBok</td></tr>
 <tr><td>Cleared searchBok</td></tr>
 <tr><td>Phone was input into UI</td></tr>
 <tr><td>Clicked on Mobile Phones</td></tr>
-<tr><td><br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp/TestsScreenshots/SS20180913022335.png'height=500' width='500'/><br></td></tr>
+<tr><td>Capcher screenshot path is <img src="file://C:\Users\bhargavi\git\TaskRepositiry2\ebayApp\test-output\screenshot\SS20180913071029.png" alt=""/></td></tr>
 <tr><td>No results found for “phone” object is displayed</td></tr>
 <tr><td>Test case to verify SearchPassed</td></tr>
-<tr><td><br><img src='C:\Users\bhargavi\Documents\GitHub\TaskRepo\TaskRepositiry\ebayApp/TestsScreenshots/SS20180913022342.png'height=500' width='500'/><br></td></tr>
+<tr><td>Capcher screenshot path is <img src="file://C:\Users\bhargavi\git\TaskRepositiry2\ebayApp\test-output\screenshot\SS20180913071037.png" alt=""/></td></tr>
 </table>
